# ctxRelay

./: .gitignore  LICENSE  README.md
.github/workflows/: ci.yml
bridge-protocol/: schema.json
crates/be-claude-code/: Cargo.toml
crates/be-claude-code/src/: commit.rs  legalize.rs  lib.rs  lower.rs
crates/be-claude-code/tests/: commit.rs  conformance.rs  content_preservation.rs  legalize.rs  lower.rs  pipeline.rs
crates/ctxrelay-backend/: Cargo.toml
crates/ctxrelay-backend/src/: lib.rs
crates/ctxrelay-cli/: Cargo.toml
crates/ctxrelay-cli/src/: bridge.rs  lib.rs  main.rs
crates/ctxrelay-cli/tests/: bridge.rs  bridge_parity.rs  cli.rs  listen.rs
crates/ctxrelay-core/: Cargo.toml
crates/ctxrelay-core/src/: dest.rs  lib.rs  pipeline.rs  registry.rs  undo.rs  verify.rs
crates/ctxrelay-core/tests/: dest.rs  pipeline.rs  pipeline_from_bytes.rs  registry.rs  undo.rs  verify.rs
crates/ctxrelay-frontend/: Cargo.toml
crates/ctxrelay-frontend/src/: lib.rs
crates/ctxrelay-ir/: Cargo.toml
crates/ctxrelay-ir/src/: block.rs  document.rs  lib.rs
crates/ctxrelay-ir/tests/: fixture.rs  roundtrip.rs
crates/fe-claude-live/: Cargo.toml
crates/fe-claude-live/src/: lib.rs  parse.rs
crates/fe-claude-live/tests/: parse.rs
crates/fe-claude-live/tests/fixtures/: sample_live_conversation.json
crates/fe-claude-share/: Cargo.toml
crates/fe-claude-share/src/: acquire.rs  lib.rs  parse.rs
crates/fe-claude-share/tests/: acquire.rs  parse.rs
crates/fe-claude-share/tests/fixtures/: sample_snapshot.json  synthetic_foreign_action.json
docs/: architecture.md
docs/superpowers/plans/: 2026-07-06-backend-claude-code.md  2026-07-06-core-cli.md  2026-07-06-frontend-claude-share.md  2026-07-06-ir-foundation.md  2026-07-07-fe-claude-live-bridge.md  2026-07-12-plugin-multi-app-bridge-refactor.md
extension/: manifest.json  options.html  package-lock.json  package.json  pnpm-lock.yaml  tsconfig.json
extension/src/: background.ts  bridge.ts  options.ts
extension/src/sources/: claude-live.ts  registry.ts  types.ts
