[package]
name = "ctxrelay-ir"
version = "0.1.0"
edition = "2021"
description = "ctxRelay 中立 IR:类型 + schema + serde + 版本号。出度为 0,不依赖 workspace 内任何其他 crate。"

[dependencies]
serde = { version = "1", features = ["derive"] }
semver = { version = "1", features = ["serde"] }
time = { version = "0.3", features = ["serde", "formatting", "parsing"] }

[dev-dependencies]
serde_json = "1"
proptest = "1"
