[package]
name = "fe-claude-live"
version = "0.1.0"
edition = "2021"
description = "claude.ai 认证态实时对话 frontend:只实现 Parse,数据由浏览器扩展主动 POST 过来,不适配 Acquire 的主动拉取语义。"

[dependencies]
ctxrelay-ir = { path = "../ctxrelay-ir" }
ctxrelay-frontend = { path = "../ctxrelay-frontend" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
semver = "1"
time = { version = "0.3", features = ["parsing"] }
